--- a/docs/support_matrix.qmd
+++ b/docs/support_matrix.qmd
@@ -7,18 +7,49 @@ hide:
 
 ```{python}
 #| echo: false
-!python ../gen_matrix.py
-```
+from pathlib import Path
 
-```{python}
-#| echo: false
 import pandas as pd
 
-support_matrix = pd.read_csv("./backends/raw_support_matrix.csv")
-support_matrix = support_matrix.assign(
-    Category=support_matrix.Operation.map(lambda op: op.rsplit(".", 1)[0].rsplit(".", 1)[-1]),
-    Operation=support_matrix.Operation.map(lambda op: op.rsplit(".", 1)[-1]),
-).set_index(["Category", "Operation"])
+import ibis
+import ibis.expr.operations as ops
+
+
+def get_backends(exclude=()):
+    entry_points = sorted(ep.name for ep in ibis.util.backend_entry_points())
+    return [
+        (backend, getattr(ibis, backend))
+        for backend in entry_points
+        if backend not in exclude
+    ]
+
+
+def get_leaf_classes(op):
+    for child_class in op.__subclasses__():
+        if not child_class.__subclasses__():
+            yield child_class
+        else:
+            yield from get_leaf_classes(child_class)
+
+
+public_ops = frozenset(get_leaf_classes(ops.Value))
+support = {"Operation": [f"{op.__module__}.{op.__name__}" for op in public_ops]}
+support.update(
+    (name, list(map(backend.has_operation, public_ops)))
+    for name, backend in get_backends()
+)
+
+support_matrix = (
+    pd.DataFrame(support)
+    .assign(splits=lambda df: df.Operation.str.findall("[a-zA-Z_][a-zA-Z_0-9]*"))
+    .assign(
+        Category=lambda df: df.splits.str[-2],
+        Operation=lambda df: df.splits.str[-1],
+    )
+    .drop(["splits"], axis=1)
+    .set_index(["Category", "Operation"])
+    .sort_index()
+)
 all_visible_ops_count = len(support_matrix)
 coverage = pd.Index(
     support_matrix.sum()
@@ -70,15 +101,16 @@ dict(
 #| content: valuebox
 #| title: "Number of SQL backends"
 import importlib
-from ibis.backends.base.sql import BaseSQLBackend
+from ibis.backends.base.sqlglot import SQLGlotBackend
 
 sql_backends = sum(
     issubclass(
         importlib.import_module(f"ibis.backends.{entry_point.name}").Backend,
-        BaseSQLBackend
+        SQLGlotBackend
     )
     for entry_point in ibis.util.backend_entry_points()
 )
+assert sql_backends > 0
 dict(value=sql_backends, color="green", icon="database")
 ```
 
